@@ -51,6 +51,9 @@ typedef enum {
   GST_TAG_DEMUX_RESULT_OK
 } GstTagDemuxResult;
 
+GType gst_tag_demux_result_get_type (void);
+#define GST_TYPE_TAG_DEMUX_RESULT (gst_tag_demux_result_get_type())
+
 /**
  * GstTagDemux:
  * @element: parent element
